# zetro

./: README.md
example/: generate_code.sh  schema.json
example/client/: package-lock.json  package.json  rollup.config.js
example/client/src/: client.ts  index.ts
example/server/: Cargo.toml
example/server/src/: main.rs
example/server/src/routes/: mod.rs
zetro/: Cargo.toml  README.md  build_schema.sh
zetro/src/: main.rs  utilities.rs
zetro/src/common/schema/: enums.rs  errors.rs  fields.rs  mod.rs  routes.rs  structs.rs
zetro/src/generators/: mod.rs
zetro/src/generators/rust/: generate_enums.rs  generate_structs.rs  mod.rs  utilities.rs
zetro/src/generators/rust/plugins/: mod.rs
zetro/src/generators/rust/plugins/warp/: mod.rs
zetro/src/generators/typescript/: generate_enums.rs  generate_structs.rs  mod.rs  utilities.rs
zetro/src/generators/typescript/plugins/: mod.rs
zetro/src/generators/typescript/plugins/class_client/: mod.rs
