[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.71"
serde_repr = "0.1.7"
warp = "0.3.1"
async-trait = "0.1.51"
bytes = "1.1.0"
fnv = "1.0.7"
tokio = { version = "1.14.0", features = ["full"] }